--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Manoj-895/ChatApp#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "mongoose": "^7.5.0",
     "nodemon": "^2.0.12",
